[tool.poetry]
name = "provwf"
version = "0.1.0"
description = ""
authors = ["nicholascar <nicholas.car@surroundaustralia.com>"]

[tool.poetry.dependencies]
python = "^3.9"
rdflib = "^6.1.1"
requests = "^2.27.1"
GitPython = "^3.1.27"

[tool.poetry.dev-dependencies]
codespell = "^2.1.0"
black = "^22.3.0"
pytest = "^7.1.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
